<resources>
    <string name="app_name">My Design Implementation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_bg_description">splash screen background image</string>
    <string name="ibook_text">iBook text</string>
    <string name="email">name@email.com</string>
    <string name="password">Password</string>
    <string name="password_hint">************</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_signin_text">We\'re glad to have you back</string>
    <string name="email_address">Email Address</string>
    <string name="setup_account_text">New to iBook? </string>
    <string name="set_up_an_account"> Set up an account</string>
    <string name="welcome">You’re all set and ready to starting your favorite books.</string>
    <string name="proceed">Proceed</string>
    <string name="onboarding_text">Reading is a conversation. All books talk but a good book listens as well.</string>
    <string name="reading">Ombudsman reading</string>
    <string name="get_started">Get Started</string>
    <string name="sign_up">Sign Up</string>
    <string name="signup_text">There\'s lots in store for you</string>
    <string name="first_name">First Name</string>
    <string name="john">John</string>
    <string name="user_name">User Name</string>
    <string name="johnwills">johnwills</string>
    <string name="last_name">Last Name</string>
</resources>