<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignupFragment">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="414dp"
        android:layout_height="425dp"
        android:src="@drawable/signup_image"
        android:importantForAccessibility="no"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_marginTop="52dp"
        android:layout_marginStart="48dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ibook_signup"
        android:importantForAccessibility="no"/>

    <LinearLayout
        android:padding="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="53dp"
        android:background="@drawable/button_bg"
        android:backgroundTint="#FFFFFFFF"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_marginBottom="10dp"
            android:text="@string/sign_up"
            android:textColor="#3A3A3A"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/signup_text"
            android:textAppearance="@style/new_to_iboo"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textAppearance="@style/new_to_iboo"
            android:textStyle="bold"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/john"
                android:background="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textAppearance="@style/new_to_iboo"
            android:textStyle="bold"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/john"
                android:background="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textAppearance="@style/new_to_iboo"
            android:textStyle="bold"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/johnwills"
                android:background="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:textAppearance="@style/new_to_iboo"
            android:textStyle="bold"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:background="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textAppearance="@style/new_to_iboo"
            android:textStyle="bold"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/green_300">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/john"
                android:background="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/sign_up_button"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            />
    </LinearLayout>
</FrameLayout>
</ScrollView>