<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.OnboardingFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="49dp">
    <LinearLayout
        android:id="@+id/ombudsman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">
        <ImageView
            android:layout_gravity="center"
            android:paddingBottom="60dp"
            android:id="@+id/reading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/reading"
            android:src="@drawable/reading" />
        <TextView
            android:id="@+id/onboarding_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_text"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textAlignment="center" />
        <Button
            android:id="@+id/get_started_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/get_started"
            android:textAllCaps="false"
            app:layout_constraintCircleRadius="10dp"/>
    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>